Contract Configurator 1.4.2
- Fixed asteroid sample showing up in KSC contracts for Field Research (thanks maculator).

Contract Configurator 1.4.1
- Add support for heading/roll/pitch in SpawnVessel.
- Fixed ghost icons in OrbitGenerator (thanks KerbMav).
- Remove warnings for Mkerb Inc. Science Instruments (worked just fine before, now is officially supported).
- Re-add limited support for Win64.

Contract Configurator 1.4.0
- Move extra science experiment definition to configuration files.
- Add support in science modules for Station Science.
- Add support in science modules for Solar Science.
- Add support in science modules for N3h3miah's science mods.
- Add additional experiment validation.
- Fix possible NRE in vessel expressions (thanks Mulbin).
- De-support buggy Win64 hacked version until Unity5.

Contract Configurator 1.3.4
- Added support in parameters for completedMessage.
- Fixed NRE in ContractVesselTracker (thanks Morashtak).
- Fixed loading of duplicate Contract Types (thanks jakkarth).
- Fixed issue where random orbits aren't so random (thanks KerbMav).
- Fixed exception loading SpawnKerbal (thanks mega_newblar).

Contract Configurator 1.3.3
- Fixed issue with some load errors getting thrown as an exception.
- Fixed exception when docking with the claw (thanks SirJodelstein).
- Fixed experiment filtering logic for Field Research (thanks Aelfhe1m and HarlyKin).

Contract Configurator 1.3.2
- Major rewrite of contract generation logic to improve performance and reduce latency on contract generation while in flight.
- Contract pre-loader now allows pausing between attributes (reduces latency during contract generation).
- Added Vessel.Location() method for expressions.
- Fixed NRE in RecoverKerbal (thanks severedsolo).
- Added AcceptContract requirement.
- Now validates for empty values when parsing contracts.
- Fixed issues with ContractVesselTracker logic for spawned vessels (thanks SirJodelstein).