@@ -1,5 +1,6 @@
 Contract Configurator 1.4.2
 - Fixed asteroid sample showing up in KSC contracts for Field Research (thanks maculator).
+- Fixed mirrored heading/roll/pitch in SpawnVessel (thanks Xephan).
 
 Contract Configurator 1.4.1
 - Add support for heading/roll/pitch in SpawnVessel.
